PROJECT (ScBridge)

CMAKE_MINIMUM_REQUIRED ( VERSION 3.4 )

MESSAGE(STATUS "\nScBridge init...")
MESSAGE(STATUS "SC_BUILD_DIR : " ${SC_BUILD_DIR})

FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Gui)
FIND_PACKAGE(Qt5Network)

SET(QT_LIBRARIES 
	Qt5::Core
	Qt5::Gui 
	Qt5::Widgets
	Qt5::Network
)

SET(ScBridge_hdr ScBridge.h)
SET(ScBridge_src ScBridge.cpp)

#ADD_EXECUTABLE(ScBridge ${ScBridge_src} ${ScBridge_hdr})

ADD_LIBRARY(ScBridge STATIC ${ScBridge_src} ${ScBridge_hdr})

TARGET_LINK_LIBRARIES(ScBridge ${QT_LIBRARIES})

#SET_DIRECTORY_PROPERTIES(ScBridge PROPERTIES INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

#INSTALL(TARGETS ScBridge DESTINATION  ${SC_BUILD_DIR}/Install/Supercollider)

MESSAGE(STATUS "\nScBridge done...")
